appId: com.fastpay.business
---

- tapOn: XXX-XXX-XXXX
- eraseText
- inputText: ${User}
- tapOn: Back
- tapOn: Enter your password
- inputText: ${Password}
- tapOn: Back

# Log In button
- tapOn: LOGIN
# Pin Page
# - tapOn:
#     id: "pinField1"
# - inputText: "123456" # Combined to avoid the timeout you had earlier
