appId: com.fastpay.business
tags:
  - P3
  - smoke
---
- tapOn:
    id: itemSend
- waitForAnimationToEnd

- assertVisible:
    id: userImage
- tapOn:
    id: parent_view
- assertVisible:
    id: amountLayout
- inputText: ${Amount}
- assertVisible: SEND
- tapOn:
    id: sendBtn
- assertVisible:
    id: rootMain
- assertVisible: CONFIRM
- tapOn:
    id: confirmBtn
- assertVisible:
    id: customEditTextView
- tapOn:
    id: pinField1
- inputText: ${Pin}
- assertVisible:
    id: dialogCardView
- assertVisible: VIEW INVOICE
- tapOn:
    id: viewInvoiceLayout
- assertVisible:
    id: invoiceLayout
- tapOn:
    id: appLogo
